--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,19 @@
 
+
+{
+    "hosting": {
+      "public": "public",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/UP.swift"
+        }
+      ]
+    }
+  }
+  
